@@ -81,21 +81,15 @@ public class GMLCoordTypeBinding extends AbstractComplexBinding {
      * @generated modifiable
      */
     public Object parse(ElementInstance instance, Node node, Object value) throws Exception {
-        int dimension = 1;
-        double x;
-        double y;
-        double z;
-        x = y = z = Double.NaN;
-
-        x = ((BigDecimal) node.getChild("X").getValue()).doubleValue();
+        double x = ((BigDecimal) node.getChild("X").getValue()).doubleValue();
+        double y = Double.NaN;
+        double z = Double.NaN;
 
         if (!node.getChildren("Y").isEmpty()) {
-            dimension++;
             y = ((BigDecimal) node.getChild("Y").getValue()).doubleValue();
         }
 
         if (!node.getChildren("Z").isEmpty()) {
-            dimension++;
             z = ((BigDecimal) node.getChild("Z").getValue()).doubleValue();
         }
 
@@ -106,15 +100,15 @@ public class GMLCoordTypeBinding extends AbstractComplexBinding {
         Coordinate c = (Coordinate) object;
 
         if ("X".equals(name.getLocalPart())) {
-            return new Double(c.x);
+            return Double.valueOf(c.x);
         }
 
         if ("Y".equals(name.getLocalPart())) {
-            return new Double(c.y);
+            return Double.valueOf(c.y);
         }
 
-        if ("Z".equals(name.getLocalPart()) && !new Double(c.z).isNaN()) {
-            return new Double(c.z);
+        if ("Z".equals(name.getLocalPart()) && !Double.valueOf(c.getZ()).isNaN()) {
+            return Double.valueOf(c.getZ());
         }
 
         return null;
