@@ -17,7 +17,7 @@
 package org.geotools.coverage.grid.io.imageio;
 
 import com.sun.media.jai.util.DataBufferUtils;
-import java.awt.Point;
+import java.awt.*;
 import java.awt.image.ComponentSampleModel;
 import java.awt.image.DataBuffer;
 import java.awt.image.DataBufferByte;
@@ -32,12 +32,13 @@ import java.awt.image.WritableRaster;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.Observable;
-import java.util.Observer;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import javax.media.jai.CachedTile;
 import javax.media.jai.TileCache;
 import javax.media.jai.TileFactory;
 import javax.media.jai.TileRecycler;
+import org.geotools.util.logging.Logging;
 
 /**
  * A simple implementation of <code>TileFactory</code> wherein the tiles returned from <code>
@@ -81,10 +82,13 @@ import javax.media.jai.TileRecycler;
  *
  * @since JAI 1.1.2
  */
-public class RecyclingTileFactory extends Observable
-        implements TileFactory, TileRecycler, Observer {
+// Observer and observable are deprecated in Java 11, however, this class should be rewritten
+// anyways and go into ImageN
+@SuppressWarnings("deprecation")
+public class RecyclingTileFactory extends java.util.Observable
+        implements TileFactory, TileRecycler, java.util.Observer {
 
-    private static final boolean DEBUG = false;
+    static final Logger LOGGER = Logging.getLogger(RecyclingTileFactory.class);
 
     /**
      * Cache of recycled arrays. The key in this mapping is a <code>Long</code> which is formed for
@@ -97,7 +101,7 @@ public class RecyclingTileFactory extends Observable
      *
      * long size; // Size of each bank
      *
-     * Long key = new Long((type &lt;&lt; 56) | (numBanks &lt;&lt; 32) | size);
+     * Long key = Long.valueOf((type &lt;&lt; 56) | (numBanks &lt;&lt; 32) | size);
      * </pre>
      *
      * where the value of <code>type</code> is one of the constants <code>DataBuffer.TYPE_*</code>.
@@ -140,7 +144,7 @@ public class RecyclingTileFactory extends Observable
     }
 
     /** Tile cache I observe. */
-    private final Observable tileCache;
+    private final java.util.Observable tileCache;
 
     /**
      * Returns a <code>SoftReference</code> to the internal bank data of the <code>DataBuffer</code>
@@ -201,7 +205,7 @@ public class RecyclingTileFactory extends Observable
     }
 
     /** Constructs a <code>RecyclingTileFactory</code>. */
-    public RecyclingTileFactory(Observable tileCache) {
+    public RecyclingTileFactory(java.util.Observable tileCache) {
         if (tileCache instanceof TileCache) this.tileCache = tileCache;
         else throw new IllegalArgumentException("Provided argument is not of type TileCache");
         tileCache.addObserver(this);
@@ -323,12 +327,11 @@ public class RecyclingTileFactory extends Observable
                         throw new IllegalArgumentException("");
                 }
 
-                if (DEBUG) {
-                    System.out.println(getClass().getName() + " Using a recycled array"); // XXX
-                    // (new Throwable()).printStackTrace(); // XXX
+                if (LOGGER.isLoggable(Level.FINE)) {
+                    LOGGER.fine(getClass().getName() + " Using a recycled array");
                 }
-            } else if (DEBUG) {
-                System.out.println(
+            } else if (LOGGER.isLoggable(Level.FINE)) {
+                LOGGER.fine(
                         getClass().getName()
                                 + " No type "
                                 + type
@@ -338,13 +341,13 @@ public class RecyclingTileFactory extends Observable
                                 + size
                                 + "] available");
             }
-        } else if (DEBUG) {
-            System.out.println(getClass().getName() + " Size is zero");
+        } else if (LOGGER.isLoggable(Level.FINE)) {
+            LOGGER.fine(getClass().getName() + " Size is zero");
         }
 
         if (db == null) {
-            if (DEBUG) {
-                System.out.println(getClass().getName() + " Creating new DataBuffer"); // XXX
+            if (LOGGER.isLoggable(Level.FINE)) {
+                LOGGER.fine(getClass().getName() + " Creating new DataBuffer"); // XXX
             }
             // (new Throwable()).printStackTrace(); // XXX
             db = sampleModel.createDataBuffer();
@@ -358,20 +361,20 @@ public class RecyclingTileFactory extends Observable
         DataBuffer db = tile.getDataBuffer();
 
         Long key =
-                new Long(
+                Long.valueOf(
                         ((long) db.getDataType() << 56)
                                 | ((long) db.getNumBanks() << 32)
                                 | (long) db.getSize());
 
-        if (DEBUG) {
-            System.out.println(
+        if (LOGGER.isLoggable(Level.FINE)) {
+            LOGGER.fine(
                     "Recycling array for: "
                             + db.getDataType()
                             + " "
                             + db.getNumBanks()
                             + " "
                             + db.getSize());
-            System.out.println("recycleTile(); key = " + key);
+            LOGGER.fine("recycleTile(); key = " + key);
         }
 
         synchronized (recycledArrays) {
@@ -395,17 +398,17 @@ public class RecyclingTileFactory extends Observable
 
     /** Retrieve an array of the specified type and length. */
     private Object getRecycledArray(int arrayType, long numBanks, long arrayLength) {
-        Long key = new Long(((long) arrayType << 56) | numBanks << 32 | arrayLength);
+        Long key = Long.valueOf(((long) arrayType << 56) | numBanks << 32 | arrayLength);
 
-        if (DEBUG) {
-            System.out.println(
+        if (LOGGER.isLoggable(Level.FINE)) {
+            LOGGER.fine(
                     "Attempting to get array for: "
                             + arrayType
                             + " "
                             + numBanks
                             + " "
                             + arrayLength);
-            System.out.println("Attempting to get array for key " + key);
+            LOGGER.fine("Attempting to get array for key " + key);
         }
 
         synchronized (recycledArrays) {
@@ -421,21 +424,19 @@ public class RecyclingTileFactory extends Observable
                     }
 
                     if (array != null) {
-                        if (DEBUG) System.out.println("good reference");
+                        if (LOGGER.isLoggable(Level.FINE)) LOGGER.fine("good reference");
                         return array;
                     }
 
-                    if (DEBUG) System.out.println("null reference");
+                    if (LOGGER.isLoggable(Level.FINE)) LOGGER.fine("null reference");
                 }
             }
         }
 
-        // if(DEBUG) System.out.println("getRecycledArray() returning "+array);
-
         return null;
     }
 
-    public void update(Observable o, Object arg) {
+    public void update(java.util.Observable o, Object arg) {
         if (o.equals(tileCache)) {
             if (arg instanceof CachedTile) {
                 CachedTile tile = (CachedTile) arg;
