@@ -49,8 +49,8 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.logging.Level;
 import javax.sql.DataSource;
+import org.apache.commons.lang3.ArrayUtils;
 import org.geotools.data.DataStore;
-import org.geotools.data.DefaultQuery;
 import org.geotools.data.DefaultTransaction;
 import org.geotools.data.FeatureStore;
 import org.geotools.data.GmlObjectStore;
@@ -61,14 +61,12 @@ import org.geotools.data.Transaction.State;
 import org.geotools.data.jdbc.FilterToSQL;
 import org.geotools.data.jdbc.FilterToSQLException;
 import org.geotools.data.jdbc.datasource.ManageableDataSource;
-import org.geotools.data.jdbc.fidmapper.FIDMapper;
 import org.geotools.data.simple.SimpleFeatureCollection;
 import org.geotools.data.simple.SimpleFeatureIterator;
 import org.geotools.data.store.ContentDataStore;
 import org.geotools.data.store.ContentEntry;
 import org.geotools.data.store.ContentFeatureSource;
 import org.geotools.data.store.ContentState;
-import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.feature.NameImpl;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.visitor.CountVisitor;
@@ -91,7 +89,6 @@ import org.opengis.feature.type.AttributeDescriptor;
 import org.opengis.feature.type.GeometryDescriptor;
 import org.opengis.feature.type.Name;
 import org.opengis.filter.Filter;
-import org.opengis.filter.FilterFactory2;
 import org.opengis.filter.Id;
 import org.opengis.filter.PropertyIsLessThanOrEqualTo;
 import org.opengis.filter.expression.BinaryExpression;
@@ -151,8 +148,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
     /** Caches the "setValue" method in various aggregate visitors */
     private static SoftValueHashMap<Class, Method> AGGREGATE_SETVALUE_CACHE =
             new SoftValueHashMap<>(1000);
-
-    private static final FilterFactory2 FF2 = CommonFactoryFinder.getFilterFactory2();
 
     /**
      * When true, record a stack trace documenting who disposed the JDBCDataStore. If dispose() is
@@ -243,6 +238,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
     /** sql type to sql type name overrides */
     protected HashMap<Integer, String> sqlTypeToSqlTypeNameOverrides;
 
+    /** cache of sqltypes found in database */
+    protected ConcurrentHashMap<Integer, String> dBsqlTypesCache;
+
     /** Feature visitor to aggregate function name */
     protected HashMap<Class<? extends FeatureVisitor>, String> aggregateFunctions;
 
@@ -316,17 +314,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * this method will replace it with the new one. * @param vt
      *
      * @throws IOException If the view definition is not valid
-     * @deprecated Use createVirtualTable instead
-     */
-    public void addVirtualTable(VirtualTable vtable) throws IOException {
-        createVirtualTable(vtable);
-    }
-
-    /**
-     * Adds a virtual table to the data store. If a virtual table with the same name was registered
-     * this method will replace it with the new one. * @param vt
-     *
-     * @throws IOException If the view definition is not valid
      */
     public void createVirtualTable(VirtualTable vtable) throws IOException {
         try {
@@ -347,17 +334,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      */
     public List<ConnectionLifecycleListener> getConnectionLifecycleListeners() {
         return connectionLifecycleListeners;
-    }
-
-    /**
-     * Removes and returns the specified virtual table
-     *
-     * @param name
-     * @return
-     * @deprecated Use dropVirtualTable instead
-     */
-    public VirtualTable removeVirtualTable(String name) {
-        return dropVirtualTable(name);
     }
 
     /**
@@ -653,6 +629,20 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         return sqlTypeToSqlTypeNameOverrides;
     }
 
+    /**
+     * Returns a map integer constants for database types (from {@link Types}) to database type
+     * names.
+     *
+     * <p>This method will return an empty map when there are no overrides.
+     */
+    public ConcurrentHashMap<Integer, String> getDBsqlTypesCache() {
+        if (dBsqlTypesCache == null) {
+            dBsqlTypesCache = new ConcurrentHashMap<Integer, String>();
+        }
+
+        return dBsqlTypesCache;
+    }
+
     /** Returns the supported aggregate functions and the visitors they map to. */
     public Map<Class<? extends FeatureVisitor>, String> getAggregateFunctions() {
         if (aggregateFunctions == null) {
@@ -660,15 +650,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
             dialect.registerAggregateFunctions(aggregateFunctions);
         }
         return aggregateFunctions;
-    }
-
-    /** Returns the supported functions and the dialect name they map to. */
-    public Map<String, String> getSupportedFunctions() {
-        if (supportedFunctions == null) {
-            supportedFunctions = new HashMap<>();
-            dialect.registerFunctions(supportedFunctions);
-        }
-        return supportedFunctions;
     }
 
     /**
@@ -680,7 +661,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * @return The mapped java class, or <code>null</code>. if no such mapping exists.
      */
     public Class<?> getMapping(int sqlType) {
-        return getSqlTypeToClassMappings().get(new Integer(sqlType));
+        return getSqlTypeToClassMappings().get(Integer.valueOf(sqlType));
     }
 
     /**
@@ -809,7 +790,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         // check for virtual table
         if (virtualTables.containsKey(typeName.getLocalPart())) {
-            removeVirtualTable(typeName.getLocalPart());
+            dropVirtualTable(typeName.getLocalPart());
             return;
         }
 
@@ -913,7 +894,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         // load the feature
         Id filter = getFilterFactory().id(Collections.singleton(id));
-        DefaultQuery query = new DefaultQuery(featureTypeName);
+        Query query = new Query(featureTypeName);
         query.setFilter(filter);
         query.setHints(hints);
 
@@ -1025,11 +1006,10 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                             escapeNamePattern(metaData, databaseSchema),
                             "%",
                             queryTypes.toArray(new String[0]));
-            if (fetchSize > 1) {
-                tables.setFetchSize(fetchSize);
-            }
-
             try {
+                if (fetchSize > 1) {
+                    tables.setFetchSize(fetchSize);
+                }
                 while (tables.next()) {
                     String schemaName = tables.getString("TABLE_SCHEM");
                     String tableName = tables.getString("TABLE_NAME");
@@ -1185,7 +1165,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
                 StringBuffer sql = new StringBuffer();
                 sql.append("SELECT ");
-                dialect.encodeColumnName(columnName, sql);
+                dialect.encodeColumnName(null, columnName, sql);
                 sql.append(" FROM ");
                 encodeTableName(tableName, sql, null);
 
@@ -1254,7 +1234,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                             escapeNamePattern(metaData, databaseSchema),
                             escapeNamePattern(metaData, tableName),
                             escapeNamePattern(metaData, columnName));
-            columns.next();
+            if (!columns.next()) {
+                throw new SQLException("Could not find metadata for column");
+            }
 
             int binding = columns.getInt("DATA_TYPE");
             Class columnType = getMapping(binding);
@@ -1266,7 +1248,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
             return columnType;
         } finally {
-            columns.close();
+            closeSafe(columns);
         }
     }
 
@@ -2129,7 +2111,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (t == Transaction.AUTO_COMMIT) {
             Connection cx = createConnection();
             try {
-                cx.setAutoCommit(true);
+                if (!cx.getAutoCommit()) {
+                    cx.setAutoCommit(true);
+                }
             } catch (SQLException e) {
                 throw (IOException) new IOException().initCause(e);
             }
@@ -2231,7 +2215,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         // more than one
         List<Object> keyValues = new ArrayList<Object>();
         for (int i = 0; i < columns.size(); i++) {
-            PrimaryKeyColumn column = columns.get(i);
             String o = dialect.getPkColumnValue(rs, columns.get(0), offset + i + 1);
             keyValues.add(o);
         }
@@ -2253,7 +2236,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * @param strict If set to true the value of the fid will be validated against the type of the
      *     key columns. If a conversion can not be made, an exception will be thrown.
      */
-    protected static List<Object> decodeFID(PrimaryKey key, String FID, boolean strict) {
+    public static List<Object> decodeFID(PrimaryKey key, String FID, boolean strict) {
         // strip off the feature type name
         if (FID.startsWith(key.getTableName() + ".")) {
             FID = FID.substring(key.getTableName().length() + 1);
@@ -2292,8 +2275,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         }
 
         // convert to the type of the key
-        // JD: usually this would be done by the dialect directly when the value
-        // actually gets set but the FIDMapper interface does not report types
         for (int i = 0; i < values.size(); i++) {
             Object value = values.get(i);
             if (value != null) {
@@ -2429,7 +2410,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 // intersect given filter with ids filter
                 filter = getFilterFactory().and(filter, lockFilter);
             }
-            Query query = new DefaultQuery(featureType.getTypeName(), filter, Query.NO_NAMES);
+            Query query = new Query(featureType.getTypeName(), filter, Query.NO_NAMES);
 
             Statement st = null;
             try {
@@ -2686,9 +2667,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("table", sql);
+        dialect.encodeColumnName(null, "table", sql);
         sql.append(",");
-        dialect.encodeColumnName("col", sql);
+        dialect.encodeColumnName(null, "col", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_RELATIONSHIP_TABLE, sql, null);
@@ -2696,7 +2677,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (table != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("table", sql);
+            dialect.encodeColumnName(null, "table", sql);
             sql.append(" = ");
             dialect.encodeValue(table, String.class, sql);
         }
@@ -2708,7 +2689,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("col", sql);
+            dialect.encodeColumnName(null, "col", sql);
             sql.append(" = ");
             dialect.encodeValue(column, String.class, sql);
         }
@@ -2730,9 +2711,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("table", sql);
+        dialect.encodeColumnName(null, "table", sql);
         sql.append(",");
-        dialect.encodeColumnName("col", sql);
+        dialect.encodeColumnName(null, "col", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_RELATIONSHIP_TABLE, sql, null);
@@ -2740,7 +2721,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (table != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("table", sql);
+            dialect.encodeColumnName(null, "table", sql);
             sql.append(" = ? ");
         }
 
@@ -2751,7 +2732,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("col", sql);
+            dialect.encodeColumnName(null, "col", sql);
             sql.append(" = ? ");
         }
 
@@ -2778,13 +2759,13 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("rtable", sql);
+        dialect.encodeColumnName(null, "rtable", sql);
         sql.append(",");
-        dialect.encodeColumnName("rcol", sql);
+        dialect.encodeColumnName(null, "rcol", sql);
         sql.append(", ");
-        dialect.encodeColumnName("rfid", sql);
+        dialect.encodeColumnName(null, "rfid", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_ASSOCIATION_TABLE, sql, null);
@@ -2792,7 +2773,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (fid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ");
             dialect.encodeValue(fid, String.class, sql);
         }
@@ -2813,13 +2794,13 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("rtable", sql);
+        dialect.encodeColumnName(null, "rtable", sql);
         sql.append(",");
-        dialect.encodeColumnName("rcol", sql);
+        dialect.encodeColumnName(null, "rcol", sql);
         sql.append(", ");
-        dialect.encodeColumnName("rfid", sql);
+        dialect.encodeColumnName(null, "rfid", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_ASSOCIATION_TABLE, sql, null);
@@ -2827,7 +2808,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (fid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ?");
         }
 
@@ -2853,22 +2834,22 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("name", sql);
+        dialect.encodeColumnName(null, "name", sql);
         sql.append(",");
-        dialect.encodeColumnName("description", sql);
+        dialect.encodeColumnName(null, "description", sql);
         sql.append(",");
-        dialect.encodeColumnName("type", sql);
+        dialect.encodeColumnName(null, "type", sql);
         sql.append(",");
-        dialect.encodeColumnName("geometry", sql);
+        dialect.encodeColumnName(null, "geometry", sql);
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_TABLE, sql, null);
 
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ");
             dialect.encodeValue(gid, String.class, sql);
         }
@@ -2888,22 +2869,22 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("name", sql);
+        dialect.encodeColumnName(null, "name", sql);
         sql.append(",");
-        dialect.encodeColumnName("description", sql);
+        dialect.encodeColumnName(null, "description", sql);
         sql.append(",");
-        dialect.encodeColumnName("type", sql);
+        dialect.encodeColumnName(null, "type", sql);
         sql.append(",");
-        dialect.encodeColumnName("geometry", sql);
+        dialect.encodeColumnName(null, "geometry", sql);
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_TABLE, sql, null);
 
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ?");
         }
 
@@ -2928,11 +2909,11 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("mgid", sql);
+        dialect.encodeColumnName(null, "mgid", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(MULTI_GEOMETRY_TABLE, sql, null);
@@ -2940,7 +2921,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ");
             dialect.encodeValue(gid, String.class, sql);
         }
@@ -2961,11 +2942,11 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("mgid", sql);
+        dialect.encodeColumnName(null, "mgid", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(MULTI_GEOMETRY_TABLE, sql, null);
@@ -2973,7 +2954,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ?");
         }
 
@@ -3016,20 +2997,20 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gid", sql);
+        dialect.encodeColumnName(null, "gid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gname", sql);
+        dialect.encodeColumnName(null, "gname", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_ASSOCIATION_TABLE, sql, null);
 
         if (fid != null) {
             sql.append(" WHERE ");
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ");
             dialect.encodeValue(fid, String.class, sql);
         }
@@ -3041,7 +3022,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gid", sql);
+            dialect.encodeColumnName(null, "gid", sql);
             sql.append(" = ");
             dialect.encodeValue(gid, String.class, sql);
         }
@@ -3053,7 +3034,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gname", sql);
+            dialect.encodeColumnName(null, "gname", sql);
             sql.append(" = ");
             dialect.encodeValue(gname, String.class, sql);
         }
@@ -3075,20 +3056,20 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gid", sql);
+        dialect.encodeColumnName(null, "gid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gname", sql);
+        dialect.encodeColumnName(null, "gname", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_ASSOCIATION_TABLE, sql, null);
 
         if (fid != null) {
             sql.append(" WHERE ");
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ? ");
         }
 
@@ -3099,7 +3080,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gid", sql);
+            dialect.encodeColumnName(null, "gid", sql);
             sql.append(" = ? ");
         }
 
@@ -3110,7 +3091,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gname", sql);
+            dialect.encodeColumnName(null, "gname", sql);
             sql.append(" = ?");
         }
 
@@ -3156,7 +3137,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         // normal attributes
         for (int i = 0; i < columnNames.length; i++) {
             // the column name
-            dialect.encodeColumnName(columnNames[i], sql);
+            dialect.encodeColumnName(null, columnNames[i], sql);
             sql.append(" ");
 
             // some sql dialects require varchars to have an
@@ -3260,73 +3241,81 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 }
             }
 
-            // check the overrides
-            String sqlTypeName = getSqlTypeToSqlTypeNameOverrides().get(sqlType);
-            if (sqlTypeName != null) {
-                sqlTypeNames[i] = sqlTypeName;
+            // check types previously read from DB
+            String sqlTypeDBName = getDBsqlTypesCache().get(sqlType);
+            if (sqlTypeDBName != null) {
+                sqlTypeNames[i] = sqlTypeDBName;
             }
         }
+        // GEOT-6347 if all sql type names have been found in dialect dont
+        // go to database
+        boolean allTypesFound = !ArrayUtils.contains(sqlTypeNames, null);
+        if (!allTypesFound) {
+            LOGGER.log(Level.WARNING, "Fetching fields from Database");
+            // figure out the type names that correspond to the sql types from
+            // the database metadata
+            DatabaseMetaData metaData = cx.getMetaData();
 
-        // figure out the type names that correspond to the sql types from
-        // the database metadata
-        DatabaseMetaData metaData = cx.getMetaData();
+            /*
+            *      <LI><B>TYPE_NAME</B> String => Type name
+            *        <LI><B>DATA_TYPE</B> int => SQL data type from java.sql.Types
+            *        <LI><B>PRECISION</B> int => maximum precision
+            *        <LI><B>LITERAL_PREFIX</B> String => prefix used to quote a literal
+            *      (may be <code>null</code>)
+            *        <LI><B>LITERAL_SUFFIX</B> String => suffix used to quote a literal
+                (may be <code>null</code>)
+            *        <LI><B>CREATE_PARAMS</B> String => parameters used in creating
+            *      the type (may be <code>null</code>)
+            *        <LI><B>NULLABLE</B> short => can you use NULL for this type.
+            *      <UL>
+            *      <LI> typeNoNulls - does not allow NULL values
+            *      <LI> typeNullable - allows NULL values
+            *      <LI> typeNullableUnknown - nullability unknown
+            *      </UL>
+            *        <LI><B>CASE_SENSITIVE</B> boolean=> is it case sensitive.
+            *        <LI><B>SEARCHABLE</B> short => can you use "WHERE" based on this type:
+            *      <UL>
+            *      <LI> typePredNone - No support
+            *      <LI> typePredChar - Only supported with WHERE .. LIKE
+            *      <LI> typePredBasic - Supported except for WHERE .. LIKE
+            *      <LI> typeSearchable - Supported for all WHERE ..
+            *      </UL>
+            *        <LI><B>UNSIGNED_ATTRIBUTE</B> boolean => is it unsigned.
+            *        <LI><B>FIXED_PREC_SCALE</B> boolean => can it be a money value.
+            *        <LI><B>AUTO_INCREMENT</B> boolean => can it be used for an
+            *      auto-increment value.
+            *        <LI><B>LOCAL_TYPE_NAME</B> String => localized version of type name
+            *      (may be <code>null</code>)
+            *        <LI><B>MINIMUM_SCALE</B> short => minimum scale supported
+            *        <LI><B>MAXIMUM_SCALE</B> short => maximum scale supported
+            *        <LI><B>SQL_DATA_TYPE</B> int => unused
+            *        <LI><B>SQL_DATETIME_SUB</B> int => unused
+            *        <LI><B>NUM_PREC_RADIX</B> int => usually 2 or 10
+            */
+            ResultSet types = metaData.getTypeInfo();
 
-        /*
-        *      <LI><B>TYPE_NAME</B> String => Type name
-        *        <LI><B>DATA_TYPE</B> int => SQL data type from java.sql.Types
-        *        <LI><B>PRECISION</B> int => maximum precision
-        *        <LI><B>LITERAL_PREFIX</B> String => prefix used to quote a literal
-        *      (may be <code>null</code>)
-        *        <LI><B>LITERAL_SUFFIX</B> String => suffix used to quote a literal
-            (may be <code>null</code>)
-        *        <LI><B>CREATE_PARAMS</B> String => parameters used in creating
-        *      the type (may be <code>null</code>)
-        *        <LI><B>NULLABLE</B> short => can you use NULL for this type.
-        *      <UL>
-        *      <LI> typeNoNulls - does not allow NULL values
-        *      <LI> typeNullable - allows NULL values
-        *      <LI> typeNullableUnknown - nullability unknown
-        *      </UL>
-        *        <LI><B>CASE_SENSITIVE</B> boolean=> is it case sensitive.
-        *        <LI><B>SEARCHABLE</B> short => can you use "WHERE" based on this type:
-        *      <UL>
-        *      <LI> typePredNone - No support
-        *      <LI> typePredChar - Only supported with WHERE .. LIKE
-        *      <LI> typePredBasic - Supported except for WHERE .. LIKE
-        *      <LI> typeSearchable - Supported for all WHERE ..
-        *      </UL>
-        *        <LI><B>UNSIGNED_ATTRIBUTE</B> boolean => is it unsigned.
-        *        <LI><B>FIXED_PREC_SCALE</B> boolean => can it be a money value.
-        *        <LI><B>AUTO_INCREMENT</B> boolean => can it be used for an
-        *      auto-increment value.
-        *        <LI><B>LOCAL_TYPE_NAME</B> String => localized version of type name
-        *      (may be <code>null</code>)
-        *        <LI><B>MINIMUM_SCALE</B> short => minimum scale supported
-        *        <LI><B>MAXIMUM_SCALE</B> short => maximum scale supported
-        *        <LI><B>SQL_DATA_TYPE</B> int => unused
-        *        <LI><B>SQL_DATETIME_SUB</B> int => unused
-        *        <LI><B>NUM_PREC_RADIX</B> int => usually 2 or 10
-        */
-        ResultSet types = metaData.getTypeInfo();
+            try {
+                while (types.next()) {
+                    int sqlType = types.getInt("DATA_TYPE");
+                    String sqlTypeName = types.getString("TYPE_NAME");
 
-        try {
-            while (types.next()) {
-                int sqlType = types.getInt("DATA_TYPE");
-                String sqlTypeName = types.getString("TYPE_NAME");
+                    for (int i = 0; i < sqlTypes.length; i++) {
+                        // check if we already have the type name from the dialect
+                        if (sqlTypeNames[i] != null) {
+                            continue;
+                        }
 
-                for (int i = 0; i < sqlTypes.length; i++) {
-                    // check if we already have the type name from the dialect
-                    if (sqlTypeNames[i] != null) {
-                        continue;
-                    }
-
-                    if (sqlType == sqlTypes[i]) {
-                        sqlTypeNames[i] = sqlTypeName;
+                        if (sqlType == sqlTypes[i]) {
+                            sqlTypeNames[i] = sqlTypeName;
+                            // GEOT-6347
+                            // cache the sqlType which required going to database for sql types
+                            getDBsqlTypesCache().putIfAbsent(sqlType, sqlTypeName);
+                        }
                     }
                 }
+            } finally {
+                closeSafe(types);
             }
-        } finally {
-            closeSafe(types);
         }
 
         // apply the overrides specified by the dialect
@@ -3344,10 +3333,8 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      *
      * @param featureType the feature type that the query must return (may contain less attributes
      *     than the native one)
-     * @param attributes the properties queried, or {@link Query#ALL_NAMES} to gather all of them
      * @param query the query to be run. The type name and property will be ignored, as they are
      *     supposed to have been already embedded into the provided feature type
-     * @param sort sort conditions
      */
     protected String selectSQL(SimpleFeatureType featureType, Query query)
             throws IOException, SQLException {
@@ -3494,7 +3481,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         try {
             // grab the full feature type, as we might be encoding a filter
             // that uses attributes that aren't returned in the results
-            SimpleFeatureType fullSchema = getSchema(featureType.getTypeName());
             toSQL.setInline(true);
             String filterSql = toSQL.encodeToString(filter);
             int whereClauseIndex = sql.indexOf(WHERE_CLAUSE_PLACE_HOLDER);
@@ -3570,7 +3556,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      *
      * @param featureType the feature type that the query must return (may contain less attributes
      *     than the native one)
-     * @param attributes the properties queried, or {@link Query#ALL_NAMES} to gather all of them
      * @param query the query to be run. The type name and property will be ignored, as they are
      *     supposed to have been already embedded into the provided feature type
      * @param cx The database connection to be used to create the prepared statement
@@ -3900,10 +3885,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         return sql.toString();
     }
 
-    private Expression expressionFromAttribute(AttributeDescriptor att) {
-        return FF2.property(att.getName());
-    }
-
     protected PreparedStatement selectAggregateSQLPS(
             String function,
             Expression att,
@@ -4100,7 +4081,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * Helper method that adds a group by statement to the SQL query. If the list of group by
      * attributes is empty or NULL no group by statement is add.
      *
-     * @param attributes the group by attributes to be encoded
+     * @param groupByExpressions the group by attributes to be encoded
      * @param sql the sql query buffer
      */
     protected void encodeGroupByStatement(
@@ -4395,7 +4376,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
             }
 
             // build "colName = value"
-            dialect.encodeColumnName(attName, sql);
+            dialect.encodeColumnName(null, attName, sql);
             sql.append(" = ");
 
             if (Geometry.class.isAssignableFrom(att.getType().getBinding())) {
@@ -4455,7 +4436,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 continue;
             }
 
-            dialect.encodeColumnName(attName, sql);
+            dialect.encodeColumnName(null, attName, sql);
             sql.append(" = ");
 
             // geometries might need special treatment, delegate to the dialect
@@ -4554,67 +4535,8 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 throw new RuntimeException(e);
             }
 
-            FIDMapper mapper =
-                    new FIDMapper() {
-                        public String createID(
-                                Connection conn, SimpleFeature feature, Statement statement)
-                                throws IOException {
-                            return null;
-                        }
-
-                        public int getColumnCount() {
-                            return key.getColumns().size();
-                        }
-
-                        public int getColumnDecimalDigits(int colIndex) {
-                            return 0;
-                        }
-
-                        public String getColumnName(int colIndex) {
-                            return key.getColumns().get(colIndex).getName();
-                        }
-
-                        public int getColumnSize(int colIndex) {
-                            return 0;
-                        }
-
-                        public int getColumnType(int colIndex) {
-                            return 0;
-                        }
-
-                        public String getID(Object[] attributes) {
-                            return null;
-                        }
-
-                        public Object[] getPKAttributes(String FID) throws IOException {
-                            return decodeFID(key, FID, false).toArray();
-                        }
-
-                        public boolean hasAutoIncrementColumns() {
-                            return false;
-                        }
-
-                        public void initSupportStructures() {}
-
-                        public boolean isAutoIncrement(int colIndex) {
-                            return false;
-                        }
-
-                        public boolean isVolatile() {
-                            return false;
-                        }
-
-                        public boolean returnFIDColumnsAsAttributes() {
-                            return false;
-                        }
-
-                        public boolean isValid(String fid) {
-                            return true;
-                        }
-                    };
             toSQL.setFeatureType(featureType);
             toSQL.setPrimaryKey(key);
-            toSQL.setFIDMapper(mapper);
             toSQL.setDatabaseSchema(databaseSchema);
         }
 
@@ -4774,7 +4696,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * supports them
      *
      * @param sql The sql to be modified
-     * @param the query that holds the limit and offset parameters
+     * @param query the query that holds the limit and offset parameters
      */
     public void applyLimitOffset(StringBuffer sql, Query query) {
         applyLimitOffset(sql, query.getStartIndex(), query.getMaxFeatures());
@@ -4871,6 +4793,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         }
     }
 
+    @SuppressWarnings("deprecation") // finalize is deprecated in Java 9
     protected void finalize() throws Throwable {
         if (dataSource != null) {
             LOGGER.severe(
@@ -4934,7 +4857,8 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
             Hints hints, GeometryDescriptor gatt, Hints.Key param) {
         if (hints == null) return false;
         if (hints.containsKey(param) == false) return false;
-        if (gatt.getType().getBinding() == Point.class) return false;
+        if (gatt.getType().getBinding() == Point.class && !dialect.canSimplifyPoints())
+            return false;
         return true;
     }
 
@@ -4979,7 +4903,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * Transaction#close()} will not result in corresponding calls to the provided {@link
      * Connection} object.
      *
-     * @param conn The externally managed connection
+     * @param cx The externally managed connection
      */
     public Transaction buildTransaction(Connection cx) {
         DefaultTransaction tx = new DefaultTransaction();
