@@ -18,7 +18,6 @@ package org.geotools.renderer.style;
 
 import java.awt.AlphaComposite;
 import java.awt.BasicStroke;
-import java.awt.Canvas;
 import java.awt.Color;
 import java.awt.Composite;
 import java.awt.Graphics2D;
@@ -30,7 +29,6 @@ import java.awt.TexturePaint;
 import java.awt.font.TextAttribute;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Rectangle2D;
-import java.awt.image.AffineTransformOp;
 import java.awt.image.BufferedImage;
 import java.net.MalformedURLException;
 import java.util.ArrayList;
@@ -71,13 +69,11 @@ import org.geotools.styling.TextSymbolizer2;
 import org.geotools.util.Range;
 import org.geotools.util.SoftValueHashMap;
 import org.geotools.util.factory.Hints;
-import org.locationtech.jts.geom.Geometry;
 import org.opengis.feature.Feature;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.filter.FilterFactory;
 import org.opengis.filter.expression.Expression;
 import org.opengis.filter.expression.Literal;
-import org.opengis.filter.expression.PropertyName;
 import org.opengis.filter.sort.SortBy;
 import org.opengis.filter.sort.SortOrder;
 import org.opengis.style.GraphicalSymbol;
@@ -116,10 +112,10 @@ public class SLDStyleFactory {
     private static final java.util.Map<String, Integer> ALPHA_COMPOSITE_LOOKUP =
             new java.util.LinkedHashMap<String, Integer>();
 
-    private static final FilterFactory ff = CommonFactoryFinder.getFilterFactory(null);
+    /** Allow mitering of angles of 70 degrees and above */
+    private static final float MITER_LIMIT = 1.75f;
 
-    /** This one is used as the observer object in image tracks */
-    private static final Canvas obs = new Canvas();
+    private static final FilterFactory ff = CommonFactoryFinder.getFilterFactory(null);
 
     /**
      * The default size for Marks when a mark is used, but no size is provided (got from the default
@@ -128,18 +124,18 @@ public class SLDStyleFactory {
     public static final int DEFAULT_MARK_SIZE = 16;
 
     static { // static block to populate the lookups
-        JOIN_LOOKUP.put("miter", new Integer(BasicStroke.JOIN_MITER));
-        JOIN_LOOKUP.put("bevel", new Integer(BasicStroke.JOIN_BEVEL));
-        JOIN_LOOKUP.put("round", new Integer(BasicStroke.JOIN_ROUND));
+        JOIN_LOOKUP.put("miter", Integer.valueOf(BasicStroke.JOIN_MITER));
+        JOIN_LOOKUP.put("bevel", Integer.valueOf(BasicStroke.JOIN_BEVEL));
+        JOIN_LOOKUP.put("round", Integer.valueOf(BasicStroke.JOIN_ROUND));
 
-        CAP_LOOKUP.put("butt", new Integer(BasicStroke.CAP_BUTT));
-        CAP_LOOKUP.put("round", new Integer(BasicStroke.CAP_ROUND));
-        CAP_LOOKUP.put("square", new Integer(BasicStroke.CAP_SQUARE));
+        CAP_LOOKUP.put("butt", Integer.valueOf(BasicStroke.CAP_BUTT));
+        CAP_LOOKUP.put("round", Integer.valueOf(BasicStroke.CAP_ROUND));
+        CAP_LOOKUP.put("square", Integer.valueOf(BasicStroke.CAP_SQUARE));
 
-        FONT_STYLE_LOOKUP.put("normal", new Integer(java.awt.Font.PLAIN));
-        FONT_STYLE_LOOKUP.put("italic", new Integer(java.awt.Font.ITALIC));
-        FONT_STYLE_LOOKUP.put("oblique", new Integer(java.awt.Font.ITALIC));
-        FONT_STYLE_LOOKUP.put("bold", new Integer(java.awt.Font.BOLD));
+        FONT_STYLE_LOOKUP.put("normal", Integer.valueOf(java.awt.Font.PLAIN));
+        FONT_STYLE_LOOKUP.put("italic", Integer.valueOf(java.awt.Font.ITALIC));
+        FONT_STYLE_LOOKUP.put("oblique", Integer.valueOf(java.awt.Font.ITALIC));
+        FONT_STYLE_LOOKUP.put("bold", Integer.valueOf(java.awt.Font.BOLD));
 
         ALPHA_COMPOSITE_LOOKUP.put("copy", AlphaComposite.SRC);
         ALPHA_COMPOSITE_LOOKUP.put("destination", AlphaComposite.DST);
@@ -320,14 +316,7 @@ public class SLDStyleFactory {
         return style;
     }
 
-    /**
-     * Really creates the symbolizer
-     *
-     * @param drawMe DOCUMENT ME!
-     * @param symbolizer DOCUMENT ME!
-     * @param scaleRange DOCUMENT ME!
-     * @return DOCUMENT ME!
-     */
+    /** Really creates the symbolizer */
     private Style2D createStyleInternal(Object drawMe, Symbolizer symbolizer, Range scaleRange) {
         Style2D style = null;
 
@@ -560,16 +549,7 @@ public class SLDStyleFactory {
         if (symbols == null || symbols.isEmpty()) {
             return null;
         }
-        final int length = symbols.size();
         ExternalGraphic eg;
-        BufferedImage img = null;
-        double dsize;
-        AffineTransform scaleTx;
-        AffineTransformOp ato;
-        BufferedImage scaledImage;
-        Mark mark;
-        Shape shape;
-        MarkStyle2D ms2d;
         for (GraphicalSymbol symbol : symbols) {
             if (LOGGER.isLoggable(Level.FINER)) {
                 LOGGER.finer("trying to render symbol " + symbol);
@@ -763,7 +743,6 @@ public class SLDStyleFactory {
             if (p.getDisplacement() != null) {
                 dispX = evalToDouble(p.getDisplacement().getDisplacementX(), feature, 0);
                 dispY = evalToDouble(p.getDisplacement().getDisplacementY(), feature, 0);
-                ;
             }
 
             // rotation
@@ -821,25 +800,6 @@ public class SLDStyleFactory {
     }
 
     /**
-     * Extracts the named geometry from feature. If geomName is null then the feature's default
-     * geometry is used. If geomName cannot be found in feature then null is returned.
-     *
-     * @param feature The feature to find the geometry in
-     * @param geomName The name of the geometry to find: null if the default geometry should be
-     *     used.
-     * @return The geometry extracted from feature or null if this proved impossible.
-     */
-    private Geometry findGeometry(final Object feature, String geomName) {
-        Geometry geom = null;
-
-        if (geomName == null) {
-            geomName = ""; // ie default geometry
-        }
-        PropertyName property = ff.property(geomName);
-        return property.evaluate(feature, Geometry.class);
-    }
-
-    /**
      * Returns the first font associated to the feature that can be found on the current machine
      *
      * @param feature The feature whose font is to be found
@@ -892,7 +852,7 @@ public class SLDStyleFactory {
 
     private java.awt.Font styleFont(
             Object feature, Font curr, java.awt.Font javaFont, TextSymbolizer symbolizer) {
-        String reqStyle = evalToString(curr.getFontStyle(), feature, null);
+        String reqStyle = evalToString(curr.getStyle(), feature, null);
 
         int styleCode;
 
@@ -902,7 +862,7 @@ public class SLDStyleFactory {
             styleCode = java.awt.Font.PLAIN;
         }
 
-        String reqWeight = evalToString(curr.getFontWeight(), feature, null);
+        String reqWeight = evalToString(curr.getWeight(), feature, null);
 
         if ("Bold".equalsIgnoreCase(reqWeight)) {
             styleCode = styleCode | java.awt.Font.BOLD;
@@ -993,7 +953,7 @@ public class SLDStyleFactory {
         // Simple optimization: let java2d use the fast drawing path if the line
         // width
         // is small enough...
-        if (width < 1.5 & lineOptimizationEnabled) {
+        if (width < 1.5 && lineOptimizationEnabled) {
             width = 0;
         }
 
@@ -1001,9 +961,9 @@ public class SLDStyleFactory {
         BasicStroke stroke2d;
 
         if ((dashes != null) && (dashes.length > 0)) {
-            stroke2d = new BasicStroke(width, capCode, joinCode, 1, dashes, dashOffset);
+            stroke2d = new BasicStroke(width, capCode, joinCode, MITER_LIMIT, dashes, dashOffset);
         } else {
-            stroke2d = new BasicStroke(width, capCode, joinCode, 1);
+            stroke2d = new BasicStroke(width, capCode, joinCode, MITER_LIMIT);
         }
 
         return stroke2d;
@@ -1482,12 +1442,7 @@ public class SLDStyleFactory {
         }
     }
 
-    /**
-     * DOCUMENT ME!
-     *
-     * @param joinType DOCUMENT ME!
-     * @return DOCUMENT ME!
-     */
+    /** */
     public static int lookUpJoin(String joinType) {
         if (SLDStyleFactory.JOIN_LOOKUP.containsKey(joinType)) {
             return ((Integer) JOIN_LOOKUP.get(joinType)).intValue();
@@ -1496,12 +1451,7 @@ public class SLDStyleFactory {
         }
     }
 
-    /**
-     * DOCUMENT ME!
-     *
-     * @param capType DOCUMENT ME!
-     * @return DOCUMENT ME!
-     */
+    /** */
     public static int lookUpCap(String capType) {
         if (SLDStyleFactory.CAP_LOOKUP.containsKey(capType)) {
             return ((Integer) CAP_LOOKUP.get(capType)).intValue();
